--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
+
+# Inclusions of mine
+*.Rproj
+/originals/
+*.RData
+*.Rdata
+*.pdf
+*.html
+*.docx
